# opjrd

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  jatos.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  config-schema.md  dependencies.md  desktop-packaging.md  developer-guide.md  geometry-and-scoring.md  jatos-deployment.md  output-schema.md  platform-support.md  release-checklist.md  trial-timing-model.md  user-guide.md
public/locales/: en-AU.json  ja-JP.json
scripts/: privacy-scan.mjs  write-dmg-checksums.mjs
src/: jatos-entry.ts  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/config-editor/: config-editor-model.ts  config-editor-ui.ts
src/core/: angles.ts  config-hash.ts  config.ts  csv.ts  experiment.ts  file-validation.ts  (+5 more)
tests/: canvas-geometry.test.ts  config-editor.test.ts  config.test.ts  experiment-source.test.ts  experiment.test.ts  fullscreen-runtime.test.ts  geometry.test.ts  golden-output.test.ts  jatos-integration.test.ts  locale-files.test.ts  mode-loader.test.ts  save-flow.test.ts  scoring.test.ts  session-output.test.ts  stimulus-assets.test.ts  tauri-fullscreen.test.ts  tauri-save-adapter.test.ts  timing.test.ts  trial-data.test.ts  trial-rendering.test.ts
(+39 files in other folders)
