[package]
name = "opjrd"
version = "0.1.1"
description = "Object Placement and Judgement of Relative Direction Program"
authors = ["Naohide Yamamoto"]
license = "MIT"
repository = "https://github.com/naohide-yamamoto/opjrd"
default-run = "opjrd"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "opjrd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
base64 = { version = "=0.22.1" }
tauri = { version = "=2.11.1", features = [] }
tauri-plugin-dialog = { version = "=2.7.1", features = [] }
tauri-plugin-fs = { version = "=2.5.1", features = [] }
